--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@
 # testing
 /coverage
 
+#packages
+/package-lock.json
+/yarn.lock
+
+
 # production
 /build
 
@@ -17,6 +22,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
